<resources>
    <string name="app_name">SPPlayer</string>

    <string name="action_settings">Settings</string>
    <string name="access_denied">access denied</string>
    <string name="nothing_found">nothing found</string>
    <string name="loading_data">loading data</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="sort">Sort</string>
    <string name="privacy">Privacy Policy</string>
    <string name="enter_part_of">Enter part of title</string>
    <string name="reset">Update playlist</string>
    <string name="sort_by_title_asc">Sort by title ascending</string>
    <string name="sort_by_artist_asc">Sort by artist ascending</string>
    <string name="sort_by_title_desc">Sort by title descending</string>
    <string name="sort_by_artist_desc">Sort by artist descending</string>
    <string name="shuffle">shuffle play</string>
    <string name="not_found">audio not found, update your playlist</string>
    <string name="title_activity_about">About</string>

</resources>
