<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/reset_db"
        android:title="@string/reset"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sort"
        android:title="@string/sort">
        <menu>
            <item
                android:id="@+id/order_id_asc"
                android:title="@string/sort_by_title_asc"
                app:showAsAction="never"/>

            <item android:id="@+id/order_id_desc"
                android:title="@string/sort_by_title_desc"
                app:showAsAction="never" />
            <item
                android:id="@+id/order_name_asc"
                android:title="@string/sort_by_artist_asc"
                app:showAsAction="never"/>

            <item android:id="@+id/order_name_desc"
                android:title="@string/sort_by_artist_desc"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
        android:id="@+id/about"
        android:title="@string/about">
        <menu>
            <item android:id="@+id/privacy"
                android:title="@string/privacy"/>
        </menu>
    </item>




</menu>